     Amohsad Caldera, Hexcake, Waterloo Sunset, 8p Morituri, Merkwuerdigliebe
 * sound:
   * added new music track, "Vengeful Pursuit" by Jeremy Nicoll.
 * user interface:
   * changed the default setting for the turn bell to on
   * removed the turn_cmd preference option
   * Savegames now have a prefix indicating the campaign they are from if
     the campaign WML declared an abbrev= tag.
 * WML engine:
   * New standard unit filter keys:
     - defense: chance to be hit on current terrain by normal weapons
     - movement_cost: movement cost on current terrain
   * the preprocessor now ignores filenames with '..' in them
 * miscellaneous and bug fixes:
   * fix a compilation bug on Windows (usleep not defined)
   * addon interface: added support for an ignore file (.ign) to configure what
     shouldn't be uploaded on the addon server (it's useful if you use a svn
     checkout for example)

Version 1.3.11:
 * campaigns
   * Eastern Invasion
     * in 'The Drowned Plains', undead no longer spawn near you randomly but
       instead they are placed on the map at the beginning of the scenario and
       remain immobile and hidden until the player steps next to them
   * Scepter of Fire
     * in 'The Dragon', the player now gets a starting castle where to recruit
       and recall normally
 * campaign server
   * fixed a bug which broke uploads with a .cfg file next to the campaign
     directory
   * finalized wescamp integration
 * map editor and terrains:
   * fixed a bug which prevented the editor to load maps with a Windows EOL on
     Windows, other platforms where not affected.
   * added a 'Mushroom Grove lit' (on cave) terrain using (string 'Uu^Ufi')
 * graphics:
   * added user-contributed graphic updates for 'storm trident', 'ankh' and
     'staff' pick-up items
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Dutch, French, Galician,
     German, Polish, Portuguese (Brazil), Swedish
 * multiplayer: